--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="profile">
     <img src="images/programmer.png" alt="profile-photo">
     <h2>Hello.</h2>
-    <p>I am a manager at Confere - Silva & Sabino.<br>My main focus is developing the company’s strategy for using technological resources, ensuring that they are used efficiently,<br>profitably and securely and evaluating and implementing new systems and infrastructure.</p>
+    <p class="intro">I am a manager at Confere - Silva & Sabino.<br>My main focus is developing the company’s strategy for using technological resources, ensuring that they are used efficiently,<br>profitably and securely and evaluating and implementing new systems and infrastructure.</p>
   </div>
   <hr>
   <div class="skills">
@@ -46,7 +46,7 @@
   <div class="contact-me">
     <h2>Get In Touch</h2>
     <h3>If you love coding as much i do.</h3>
-    <p>Let's talk about how awesome is coding, we can talk while hiking!</p>
+    <p class="contact-message">Let's talk about how awesome is coding, we can talk while hiking!</p>
     <a class="btn" href="mailto:fredericogago@hotmail.com">CONTACT ME</a>
   </div>
 </div>
@@ -55,7 +55,7 @@
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/frederico-gago-5849281aa/">LinkedIn</a>
   <a class="footer-link" href="https://github.com/FredericoIsaac">GitHub</a>
-  <p>© 2021 Frederico Gago.</p>
+  <p class="copyright">© 2021 Frederico Gago.</p>
 </div>
 
 </body>
